# MusicPlayer

./: .gitignore  CMakeLists.txt  Makefile  MusicPlayer.pptx  README.md  main.cpp
src/: main.cpp
src/Audio/: AudioEngine.cpp  AudioEngine.h
src/Audio/Decoders/: FlacDecoder.cpp  FlacDecoder.h  MP3Decoder.cpp  MP3Decoder.h  WavDecoder.cpp  WavDecoder.h
src/Audio/Interface/: IAudioDecoder.h
src/UI/: ImGuiManager.cpp  ImGuiManager.h  MainWindow.cpp  MainWindow.h
tests/: test.cpp
